--- a/03-express/00-platform/AJAX-CORS/package.json
+++ b/03-express/00-platform/AJAX-CORS/package.json
@@ -1,7 +1,6 @@
 {
   "name": "AJAX-CORS",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "session": "^0.1.0",
     "socket.io": "^2.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
