--- a/04-mongodb/02-mongoose/02-mongoose-dashboard/package.json
+++ b/04-mongodb/02-mongoose/02-mongoose-dashboard/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
-    "express-flash": "0.0.2",
+    "body-parser": "^1.19.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
     "mongoose": "^5.5.8",
-    "session": "^0.1.0",
-    "socket.io": "^2.2.0"
+    "mongoose-auto-increment": "^5.0.1"
   }
 }
